fix overflow

--- a/numerc/static/numerc/styles.css
+++ b/numerc/static/numerc/styles.css
@@ -1359,7 +1359,7 @@
 		background-color: rgb(246, 248, 250);
 		counter-reset: lineNumber;
 		list-style: none;
-		margin: 0 auto;
+		margin: 5px auto;
 		padding: 0.1em 0;
 		border-top: solid thin var(--lightGrey);
 		border-bottom: solid thin var(--lightGrey);
@@ -1399,7 +1399,8 @@
 	/* Table for counting operations - algorithmic analysis */
 	table.alg {
 		border: none;
-		width: fit-content;
+		max-width: 95%;
+		margin: 0 auto;
 	}
 	div.alg {
 		overflow-x: auto;
@@ -2856,17 +2857,18 @@
 		transform: translate3d(0, 0.3em, -0.5em);
 	}
 /* Linked List */
-	ul.linkedlist div {
-		height: fit-content;
-	}
 	ul.linkedlist {
 		display: flex;
 		font-family: "Fira";
 		font-size: 0.7rem;
 		flex-direction: row;
-		margin: 5% 0;
-		overflow-x: auto;
+		/* justify-content: center; */
+		margin: 3px 0;
+		width: 100%;
 		overflow-y: hidden;
+	}
+	ul.linkedlist div {
+		height: fit-content;
 	}
 	ul.linkedlist ul {
 		padding: 0;
@@ -2885,10 +2887,12 @@
 		display: grid;
 		grid-template-areas: 
 			"a b"
-			"c .";
+			"c c";
+		min-width: 0;
+		min-height: 0;
 	}
 	ul.linkedlist div {
-		padding: 2px 2px;
+		padding: 1px;
 	}
 	ul.linkedlist ul li div:nth-child(1) {
 		border: solid thin rgb(214, 194, 144);
@@ -3295,4 +3299,5 @@
 		@media (min-width: 0px) and (max-width: 600px) {
 			section {padding: 1vw 3vw;}
 		}
+
 	
